packages/svelte/tests/validator/samples/css-mismatched-quotes/input.svelte
<div></div>

<style>
	div {
		background-image: url("star.gif');
	}
</style>
