packages/svelte/tests/compiler-errors/samples/css-global-block-invalid-selector/main.svelte
<style>
	/* ok */
	.x :global {
	}
	/* not ok */
	:global .x {
	}
</style>
